--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -6,6 +6,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.0.2",
+    "firebase": "^10.11.0",
     "lucide-react": "^0.372.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
