--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi
+fastapi~=0.110.2
 uvicorn
-chromadb
+chromadb~=0.4.24
 google-generativeai
-python-dotenv
+python-dotenv~=1.0.1
+uagents~=0.11.1
+together~=1.1.2
