--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -24,7 +24,7 @@
     "react-hook-form": "^7.51.3",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
